[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Haneen Hashlamoun <haneen.hashlamoun@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
jupyter = "^1.0.0"
pandas = "^1.3.4"
numpy = "^1.21.3"
scipy = "^1.7.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
